--- a/REST API/Backend/package.json
+++ b/REST API/Backend/package.json
@@ -17,12 +17,15 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^5.3.1",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
     "multer": "^1.4.0",
     "socket.io": "^4.6.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
